@@ -4,10 +4,8 @@ WORKDIR /app
 
 RUN mkdir -p /app/logs
 
-COPY target/scala-3.3.5/hyperbolic-time-chamber-1.9.0.jar app.jar
+COPY target/scala-3.3.5/hyperbolic-time-chamber-1.12.0.jar app.jar
 
-# Expor porta da aplicação
 EXPOSE 1600-2700
 
-# Rodar aplicação
-CMD ["java", "-jar", "app.jar"]
+CMD ["java", "-XX:+ZGenerational",  "-jar", "app.jar"]
